# omar-mass

./: Cargo.toml  README.md
data/: hardmath_subset.jsonl  math_subset.jsonl
probes/: README.md  svp.py  sweep.py
probes/results/: RESULTS.md  svp.csv  sweep.csv
results/: round-robin-by-n.csv
scripts/: prepare_hardmath.py  run_round_robin.sh
src/: bench.rs  blocks.rs  grade.rs  graph.rs  mailbox.rs  main.rs  math.rs  omar.rs  prompts.rs  protocol.rs  runner.rs  topology.rs
tests/ci/: mass_hardmath_smoke.sh
